@@ -1,3 +1,10 @@
+2009-03-24  Christian Persch  <chpe@gnome.org>
+
+	* src/eggdesktopfile.c: (egg_set_desktop_file):
+	* src/eggsmclient-1.patch:
+	* src/eggsmclient.c: (egg_sm_client_get_option_group): Update smclient
+	to latest libegg copy. Bug #560328 continued.
+
 2009-03-24  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plugins/screenshot/totem-screenshot-plugin.c (impl_activate):
